--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,8 @@
-<p>posts</p>
-<%= form_for :post, url: posts_path do |f| %>
-<p>
+<h1>Editing Post</h1>
+ 
+<%= form_for :post, url: post_path(@post), method: :patch do |f| %>
+ 
+  <p>
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </p>
@@ -15,3 +17,5 @@
   </p>
  
 <% end %>
+ 
+<%= link_to 'Back', post_path %>
