--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,4 +13,7 @@
  *= require_tree .
  *= require_self
  */
-body{background-color: green}
+body{
+    background-color: white;
+    text-align: center;
+}
