--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,3 @@
-<h1>Welcome#index</h1>
+<img src ="https://advancement.uncc.edu/sites/advancement.uncc.edu/files/media/crown.gif" alt="unccCrownLogo">
+<h1>Welcome to Ask A Niner</h1>
 <%= link_to 'Posts', controller: 'posts' %>
