--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,12 +5,20 @@
   <tr>
     <th>Title</th>
     <th>Created</th>
+    <th>Category</th>
   </tr>
  
   <% @posts.each do |post| %>
     <tr>
       <td><%= post.title %></td>
       <td><%= post.created_at %></td>
+      <td><%=
+          if post.category.to_s.empty?
+            "None"
+          else
+            post.category
+          end
+          %></td>
       <td><%= link_to 'Show', post_path(post) %></td>
       <td><%= link_to 'Edit', edit_post_path(post) %></td>
       <td><%= link_to 'Destroy',
