--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,7 +4,10 @@
     <%= f.label :title %><br>
     <%= f.text_field :title %>
   </p>
- 
+  <p>
+    <%= f.label :category %><br>
+    <%= f.text_field :category%>
+  </p>
   <p>
     <%= f.label :text %><br>
     <%= f.text_area :text %>
