Add drop down menu for category selection

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,7 +6,7 @@
   </p>
   <p>
     <%= f.label :category %><br>
-    <%= f.text_field :category%>
+    <%= f.select :category, [['General','general'],['Computer Science', 'computer_science']]%>
   </p>
   <p>
     <%= f.label :text %><br>
