Added the categories array to the post.rb and the new.html pulls from that

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -6,7 +6,8 @@
   </p>
   <p>
     <%= f.label :category %><br>
-    <%= f.select :category, [['General','general'],['Computer Science', 'computer_science']]%>
+    <%= f.collection_select :category, Post::CATEGORIES, :to_s, :to_s,
+        :include_blank => true%>
   </p>
   <p>
     <%= f.label :text %><br>
