--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -5,3 +5,44 @@ table{
     width: 100%;
     text-align: left;
 }
+
+#title {
+    font-size: 36px;
+}
+input[type=text] {
+    width: 50%;
+    padding: 12px 12px;
+    border: 2px solid #ccc;
+    background-color: #f8f8f8;
+}
+
+textarea {
+    width: 50%;
+    height: 300%;
+    padding: 12px 12px;
+    border: 2px solid #ccc;
+    background-color: #f8f8f8;
+    resize: none;
+}
+
+input[type=button], input[type=submit] {
+    background-color: #4CAF50;
+    float: right;
+    border: none;
+    color: white;
+    padding: 16px 20px;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 12px;
+}
+.button {
+    background-color: #4CAF50;
+    float: right;
+    border: none;
+    color: white;
+    padding: 16px 20px;
+    text-decoration: none;
+    cursor: pointer;
+    border-radius: 12px;
+}
+
