Made index partial to eventually add to welcome page

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,3 +1,6 @@
 <img src ="https://advancement.uncc.edu/sites/advancement.uncc.edu/files/media/crown.gif" alt="unccCrownLogo">
 <h1>Welcome to Ask A Niner</h1>
 <%= link_to 'Posts', controller: 'posts' %>
+<!--<div>
+    <%= render 'posts/index' %>
+</div>-->
