--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<p id="title">Post</p>
+<p id="title">New Post</p>
 <%= form_for :post, url: posts_path do |f| %>
 <p>
     <%= f.label :title %><br>
