--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,11 @@
       <% else %>
         <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
       <% end %>
+      <%= params %>
+      <!--<% if current_user %>-->
+      <!--  <%=current_user.uid%>-->
+      <!--  <%=current_user.provider%>-->
+      <!--<%end%>-->
     </div>
     <%= yield %>
   </body>
