--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,10 +18,10 @@
         <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
       <% end %>
       <%= params %>
-      <!--<% if current_user %>-->
-      <!--  <%=current_user.uid%>-->
-      <!--  <%=current_user.provider%>-->
-      <!--<%end%>-->
+      <% if current_user %>
+        <%=current_user.uid%>
+        <%=current_user.created_at%>
+      <%end%>
     </div>
     <%= yield %>
   </body>
