--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -30,11 +30,13 @@
           %></td>
       <td><%= link_to 'Show', post_path(post) %></td>
       <td><%= link_to 'Edit', edit_post_path(post) %></td>
-      <% if current_user.uid.eql?post.author_id%>
-        <td><%= link_to 'Destroy',
-                              post_path(post),
-                              method: :delete,
-                              data: { confirm: 'Are you sure?' } %></td>
+      <% if current_user %>
+        <% if current_user.uid.eql?post.author_id%>
+          <td><%= link_to 'Destroy',
+                                post_path(post),
+                                method: :delete,
+                                data: { confirm: 'Are you sure?' } %></td>
+        <% end %>
       <% end %>
     </tr>
   <% end %>
