--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,15 +1,24 @@
-<p>
-    <%= @post.title %>
-</p>
-<p>
-    <%= @post.author %>
-</p>
-<p>
-    <%= @post.created_at %>
-</p>
-<p>
-    <%= @post.text %>
-</p>
+<div id="post">    
+    <div id="postTitle">
+        <h3>
+            <%= @post.title %>
+        </h3>
+    </div>
+    <div id="postCred">
+       
+            Posted by <%= @post.author %>
+       
+        
+            at <%= @post.created_at %>
+        
+    </div>
+
+    <div id="postContent">
+        <p>
+            <%= @post.text %>
+        </p>
+    </div>
+</div>
 <h2>Replies</h2>
 <%= render @post.replies %>
 
