--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,5 @@
-<img src ="https://advancement.uncc.edu/sites/advancement.uncc.edu/files/media/crown.gif" alt="unccCrownLogo">
-<h1>Welcome to Ask A Niner</h1>
-<%= link_to 'Posts', controller: 'posts' %>
-<!--<div>
+<h1>Home</h1>
+<%= link_to 'All Posts', controller: 'posts' %>
+<div class=index2>
     <%= render 'posts/index' %>
-</div>-->
+</div>
