Added some more CSS

--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -13,6 +13,6 @@
 th{
     background-color:#47995c;
 }
-tr:hover {background-color:#cff9dd;}
+.index1 tr:hover {background-color:#cff9dd;}
 // tr:hover:nth-child(even) {background-color: #cff9dd;}
 tr:nth-child(even) {background-color: #f2f2f2;}
