--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -77,4 +77,16 @@
     text-align:left;
     padding:10px;
 }
+#nav{
+    
+    margin:auto;
+    width:85%;
+    
+}
+.link{
+    background-color: #4CAF50;
+    border-radius: 4px;
+    width:10px;
+    height:10px;
+}
 
