--- a/app/views/replies/_reply.html.erb
+++ b/app/views/replies/_reply.html.erb
@@ -8,9 +8,11 @@
   <div id="replyContent">
     <%= reply.body %>
   </div>
+  <% if current_user%>
   <div>
     <%= link_to 'Delete Reply', [reply.post, reply],
                 method: :delete,
                 data: {confirm: 'Are you sure' } %>
   </div>
+  <% end %>
 </div>
