Added Css to the new post page

--- a/app/views/replies/_reply.html.erb
+++ b/app/views/replies/_reply.html.erb
@@ -9,10 +9,12 @@
     <%= reply.body %>
   </div>
   <% if current_user%>
-  <div>
-    <%= link_to 'Delete Reply', [reply.post, reply],
-                method: :delete,
-                data: {confirm: 'Are you sure' } %>
-  </div>
+    <% if current_user.uid.eql?reply.commenter_id %>
+      <div id="replyDelete">
+        <%= link_to 'Delete Reply', [reply.post, reply],
+                    method: :delete,
+                    data: {confirm: 'Are you sure' } %>
+      </div>
+    <% end %>
   <% end %>
 </div>
