--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -90,4 +90,45 @@
     width:10px;
     height:10px;
 }
+#createPostForm{
+    width:70%;
+    border:solid black 1px;
+    margin: auto;
+    padding-bottom: 20px;
+    background-color:#47995c;
+}
+#createPostCred{
+    width:80%;
+    background-color:white;
+    margin: auto;
+    padding:10px;
+    padding-top:15px;
+}
+#createPostCred input[type=text]{
+    width:72%;
+    border: 2px solid #ccc;
+    background-color: #f8f8f8;
+}
+#createPostCred select{
+    border: 2px solid #ccc;
+    background-color: #f8f8f8;
+}
+#createPostContent{
+    padding:10px;
+    width:80%;
+    margin: auto;
+    background-color:white;
+}
+#createPostContent textarea{
+    width: 99%;
+    height: 100px;
+    border: 2px solid #ccc;
+    background-color: #f8f8f8;
+    resize: none;
+    margin:auto;
+}
+#createPostButton{
+    margin: auto;
+    padding-top:20px;
+}
 
