--- a/app/views/replies/_form.html.erb
+++ b/app/views/replies/_form.html.erb
@@ -4,7 +4,7 @@
   <!--  <%= f.text_field :commenter %>-->
   <!--</p>-->
   <div id="createReplyBox">
-    <%= f.text_area :body %>
+    <%= f.text_area :body, placeholder:"Reply Here" %>
   </div>
   <div id ="createReplyButton">
     <%= f.submit %>
