--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -49,7 +49,7 @@
 // }
 .index1{
     border: 1px solid black;
-    width: 80%;
+    width: 60%;
     overflow-x:auto;
     margin:auto;
     padding:10px;
@@ -59,9 +59,9 @@
     text-align:left;
 }
 #post{
-    border:solid black 1px;
+    padding:10px;
     text-align:left;
-    width:80%;
+    width:60%;
     margin:auto;
 }
 #postTitle{
@@ -81,7 +81,7 @@
 #nav{
     
     margin:auto;
-    width:85%;
+    width:65%;
     
 }
 .link{
@@ -91,6 +91,7 @@
     height:10px;
 }
 #createPostForm{
+    
     width:70%;
     border:solid black 1px;
     margin: auto;
@@ -130,5 +131,8 @@
 #createPostButton{
     margin: auto;
     padding-top:20px;
+}
+ul{
+    list-style-type: none;
 }
 
