--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,6 +1,20 @@
+<% if @post.errors.any? %>
+    <div id="error_explanation">
+      <h2>
+        <%= pluralize(@post.errors.count, "error") %> prohibited
+        this article from being saved:
+      </h2>
+      <ul>
+        <% @post.errors.full_messages.each do |msg| %>
+          <li><%= msg %></li>
+        <% end %>
+      </ul>
+    </div>
+  <% end %>
 <div id="createPostForm">
   <p id="title">New Post</p>
   <%= form_for :post, url: posts_path do |f| %>
+ 
     <div id="createPostCred">
       
       <%= f.text_field :title, placeholder:"Add your title here" %>
