homepage displays the users posts

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -132,6 +132,12 @@
     margin: auto;
     padding-top:20px;
 }
+#error_explanation{
+    width:70%;
+    margin: auto;
+    background-color:#e2dcd9;
+    border:solid red 1px;
+}
 ul{
     list-style-type: none;
 }
