--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,6 +1,7 @@
 <h1>Home</h1>
-<%= link_to 'All Posts', controller: 'posts' %>
+
 <% if current_user %>
+    <%= link_to 'All Posts', controller: 'posts' %>
     <h2>Your Posts</h2>
     <% if @posts.empty? %>
         <p>Oh, it looks like you have yet to make a 
@@ -10,5 +11,12 @@
     <% end %>
 
 <% else %>
-
+    <div id="stopMessage">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/81/Stop_sign.png" id="stopSign"alt="Stop_sign">
+        <h4>Woah there champ, we noticed you aren't signed in. We highly
+        recommend you sign on in, so you can get the most out of our site's features.
+        But, if you don't want to <%= link_to "Sign in", "/auth/google_oauth2", id: "sign_in" %> feel free to view the 
+        posts <%= link_to 'here.', controller: 'posts' %></h4>
+    </div>
+    
 <%end%>
