--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -6,8 +6,13 @@ table{
     text-align: left;
 }
 
-#title {
-    font-size: 36px;
+h1 , #title{
+    color: #4CAF50; 
+    font-family: 'Trocchi', serif; 
+    font-size: 45px; 
+    font-weight: normal; 
+    line-height: 48px; 
+    margin: 0;
 }
 input[type=text] {
     width: 50%;
@@ -35,7 +40,10 @@ input[type=button], input[type=submit] {
     cursor: pointer;
     border-radius: 12px;
 }
-:link {
+
+tr:hover {background-color: #f5f5f5;}
+
+a {
     background-color: #4CAF50;
     float: left;
     border: none;
