Added a form to allow the user to change their major

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,6 +24,7 @@
       <!--<%= params %>-->
       <!--<% if current_user %>-->
       <!--<%end%>-->
+      <!--<%= current_user.major %>-->
 
     </div>
     </div>
