--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,6 +18,7 @@
       <% if current_user %>
         Signed in as <strong><%= current_user.name %></strong>!
         <%= link_to "Sign out", signout_path, id: "sign_out" %>
+        <br><%= link_to 'Change Major', edit_session_path(current_user)%>
       <% else %>
         <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
       <% end %>
@@ -25,6 +26,7 @@
       <!--<% if current_user %>-->
       <!--<%end%>-->
       <!--<%= current_user.major %>-->
+      
 
     </div>
     </div>
