--- a/app/views/posts/_index2.html.erb
+++ b/app/views/posts/_index2.html.erb
@@ -8,7 +8,7 @@
     <th></th>
   </tr>
  
-  <% @posts.each do |post| %>
+  <% @posts2.each do |post| %>
     
         <tr>
           <td><%= link_to post.title, post_path(post) %></td>
