--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
       <% else %>
         <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
       <% end %>
-      <!--<%= params %>-->
+      <%= params %>
       <!--<% if current_user %>-->
       <!--<%end%>-->
       
