Added some Css to the show post page

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -63,6 +63,9 @@
     text-align:left;
     width:60%;
     margin:auto;
+    border-right:solid black 1px;
+    border-left:solid black 1px;
+    border-top:solid black 1px;
 }
 #postTitle{
     border:solid black 1px;
