--- a/app/assets/stylesheets/replies.scss
+++ b/app/assets/stylesheets/replies.scss
@@ -4,6 +4,9 @@
 #createReplyBox{
     width:60%;
     margin: auto;
+    padding:10px;
+    border-right:solid black 1px;
+    border-left:solid black 1px;
 }
 #createReplyBox textarea{
     width: 99%;
@@ -18,20 +21,27 @@
     width: 60%;
     margin:auto;
     text-align:right;
-    padding:5px;
-    padding-bottom:10px;
+    padding:10px;
+    padding-top:5px;
+    border-right:solid black 1px;
+    border-left:solid black 1px;
 }
 #reply{
     border:solid black 1px;
     width:60%;
     margin: auto;
+    padding:10px;
 
 }
 #replyHeader{
     width:60%;
     margin: auto;
     text-align:left;
-    border:solid black 1px;
+    padding:10px;
+    border-right:solid black 1px;
+    border-left:solid black 1px;
+
+    
 }
 #replyCred{
     text-align:left;
@@ -39,6 +49,7 @@
 #replyContent{
     text-align:left;
     padding:10px;
+    border:solid black 1px;
 }
 #replyDelete{
     text-align:right;
