fixed problem where an empty reply would be displayed

--- a/app/views/replies/_reply.html.erb
+++ b/app/views/replies/_reply.html.erb
@@ -1,3 +1,4 @@
+<% if !reply.body.to_s.empty?%>
 <div id="reply">
   
   <div id="replyCred">
@@ -20,3 +21,4 @@
     <% end %>
   <% end %>
 </div>
+<%end%>
