add some CSS to the change major page

--- a/app/assets/stylesheets/replies.scss
+++ b/app/assets/stylesheets/replies.scss
@@ -38,8 +38,8 @@
     margin: auto;
     text-align:left;
     padding:10px;
-    border-right:solid black 1px;
-    border-left:solid black 1px;
+    border:solid black 1px;
+    border-top:none;
 
     
 }
