--- a/app/views/replies/_reply.html.erb
+++ b/app/views/replies/_reply.html.erb
@@ -3,7 +3,7 @@
   
   <div id="replyCred">
     <p>
-    <%= reply.commenter %>
+    Posted by <%= reply.commenter %>
     at <%=reply.created_at%>
     </p>
   </div>
