--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,8 @@
       <% else %>
         <%= link_to "Sign in with Google", "/auth/google_oauth2", id: "sign_in" %>
       <% end %>
-      <%= params %>
-      <!--<% if current_user %>-->
-      <!--<%end%>-->
+      <!--<%= params %>-->
+      
       
       
 
