--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -7,6 +7,10 @@
 <p>
     <%= @post.text %>
 </p>
+<p>
+    <%= @post.like %> Likes <%= @post.dislike %> Dislikes
+</p>
+<%= render 'posts/edit' %>
 <h2>Replies</h2>
 <%= render @post.replies %>
 
