--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -27,11 +27,11 @@
           end
           %></td>
       <td><%= link_to 'Show', post_path(post) %></td>
-      <td><%= link_to 'Edit', edit_post_path(post) %></td>
       <td><%= link_to 'Destroy',
                             post_path(post),
                             method: :delete,
                             data: { confirm: 'Are you sure?' } %></td>
+      <td><%= post.like %> Likes <%= post.dislike %> Dislikes</td>
     </tr>
   <% end %>
 </table>
